--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
         <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class='introBox'>
+            <div class='elfBox'>
+                <img src='images/elf2tran.png' alt='elf'>
+            </div>
+            <div class='vs1'>
+                <p>VS</p>
+            </div>
+            <div class="wizardBox">
+                <img src='images/wizzardtrans.png' alt='wizard'>
+            </div>
+            <div class='vs1'>
+                <p>VS</p>
+            </div>
+            <div class="giantBox">
+                <img src='images/gianttran.png' alt='wizard'>
+            </div>
+        </div>
         
     </body>
 </html>
