--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
         <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="title">
+            <p>Elves vs Wizards vs Giants</p>
+        </div>
+        <div class="rulesButton">
+            <button id='rulesbutton'>Rules</button>
+        </div>
         <div class='introBox'>
-            <div class='elfBox'>
+            <div class=''>
                 <img src='images/elf2tran.png' alt='elf'>
             </div>
             <div class='vs1'>
@@ -16,12 +22,23 @@
             <div class="wizardBox">
                 <img src='images/wizzardtrans.png' alt='wizard'>
             </div>
-            <div class='vs1'>
+            <div class='vs2'>
                 <p>VS</p>
             </div>
             <div class="giantBox">
                 <img src='images/gianttran.png' alt='wizard'>
             </div>
+        </div>
+        <div class='rules'>
+            <p>Rules</p>
+            <ul>
+                <li>Test</li>
+                <li>Test</li>
+                <li>Test</li>
+                <li>Test</li>
+                <li>Test</li>
+
+            </ul>
         </div>
         
     </body>
