--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src='javascript.js'>Image</script>
 
     </head>
-    <body>
+    <body onload="titleImageScroll()">
         <div class='scrollContainer'>
             <div class="containerKnight">
                 <img src='images/knighttransparent.png' alt='knight'>
