--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Enter Your Name</p>
                 <input id="user__Name" placeholder="Username">
                 <div class="button__Class">
-                <button class="input__Name">Lets Play</button>     
+                <button class="input__Name" onclick="name__Get()">Lets Play</button>     
                 </div>
                 
             </div>
