--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Enter Your Name</p>
                 <input id="user__Name" placeholder="Username">
                 <div class="button__Class">
-                <button class="input__Name" onclick="name__Get()"><a href="#user__char">Lets Play</a></button>     
+                <button class="input__Name" onclick="name__Get()"><a href="#entered__username">Lets Play</a></button>     
                 </div>
                 <div class="game__Play"><img src="images/castletrans.png" id="game__Playimg"></div>
                 
@@ -107,7 +107,7 @@
                 <input id="user__char" type="image" src="images/wizzardtrans.png" onclick="gameplay(2)">   
             </div>
             <div class="score_keep">
-                <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score">:</span></div>
+                <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score"></span></div>
                 <div class="comp_score">Computer score: <span id='comp__score'></span></div>
             </div>
 
