--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <ul>  
                 <li>Select the character, Elf, Wizzard or Giant.</li>
                 <li>The computer will then randomly select a character. </li>
-                <li>An elf will defeat a wizzard.</li>
-                <li>A wizzard will defeat a giant.</li>
-                <li>A giant will defeat an elf.</li> 
+                <li>An Elf will defeat a Giant.</li>
+                <li>A Giant will defeat a Wizzard.</li>
+                <li>A Wizzard will defeat an Elf.</li> 
             </ul>
                 <div class="rules__image"><img src='images/elf2tran.png'> </div>
         </div>
@@ -117,12 +117,14 @@
                 <div class="user__Char" id="results">
                     <div class="user__Name">
                         <span id="user_NameDisplay"></span>
-                            <div class="user_Pic"><img src="images/wizzardtrans.png"></div>
-                        <span id=""><img src="images/wizzardtrans.png"></span>
+                            <div class="user_Pic"><img src="" id="user__picResults"></div> 
+                            <div id="comp_Pic"><img src="" id="comp__picResults"></div>
                     </div>
                 </div>
             </div>
-                <span >wizzard beats giant</span>
+                <div class="results_sentence">
+                    <p id="results__sentence"></p>
+                </div>
 
 
 
