--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class='rulesTitle' id="rules">How to play</div>
         <div class="rules__Container">          
             <ul>  
-                <li>Select the character, Elf, Wizzard or Giant.</li>
+                <li>Select the character, Elf, Wizard or Giant.</li>
                 <li>The computer will then randomly select a character. </li>
                 <li>An Elf will defeat a Giant.</li>
-                <li>A Giant will defeat a Wizzard.</li>
-                <li>A Wizzard will defeat an Elf.</li> 
+                <li>A Giant will defeat a Wizard.</li>
+                <li>A Wizard will defeat an Elf.</li> 
             </ul>
                 <div class="rules__image"><img src='images/elf2tran.png'> </div>
         </div>
@@ -108,7 +108,7 @@
             </div>
             <div class="score_keep">
                 <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score"></span></div>
-                <div class="comp_score">Computer score: <span id='comp__score'></span></div>
+                <div class="comp_score">Computer Score: <span id='comp__score'></span></div>
             </div>
 
 
