--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
             <div class="score_keep">
                 <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score"></span></div>
                 <div class="comp_score">Computer Score: <span id='comp__score'></span></div>
+                <div class="game_count">Game: <span id="game__count"></span></div>
             </div>
 
 
             <!--display results of game-->
+            <!--
             <div class="results">
                 <div class="user__Char" id="results">
                     <div class="user__Name">
@@ -125,7 +127,8 @@
                 <div class="results_sentence">
                     <p id="results__sentence"></p>
                 </div>
-
+            -->
+            
 
 
 
