--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                     <a href='#players'>Meet the Players</a>    
                 </div>
                 <div class="nameButton_class">
-                    <a href='#letsPlay'>Lets Play</a>    
+                    <a href='#letsPlay'>Let's Play</a>    
                 </div>
         </div> 
 
         <!--game rules-->
-        <div class='rulesTitle' id="rules">How to play</div>
+        <div class='rulesTitle' id="rules">How to Play</div>
         <div class="rules__Container">          
             <ul>  
-                <li>Select the character, Elf, Wizard or Giant.</li>
+                <li>Select the character; Elf, Wizard or Giant.</li>
                 <li>The computer will then randomly select a character. </li>
                 <li>An Elf will defeat a Giant.</li>
                 <li>A Giant will defeat a Wizard.</li>
@@ -83,13 +83,13 @@
                 <a href="#letsPlay">Next Section</a>
             </div>
           
-        <div class='lets__Play' id='letsPlay'>Lets play</div>
+        <div class='lets__Play' id='letsPlay'>Let's play</div>
         <div class="game__Play">
             <div class="name__Enter">
                 <p>Enter Your Name</p>
                 <input id="user__Name" placeholder="Username">
                 <div class="button__Class">
-                <button class="input__Name" onclick="name__Get()"><a href="#entered__username">Lets Play</a></button>     
+                <button class="input__Name" onclick="name__Get()"><a href="#entered__username">Let's Play</a></button>     
                 </div>
                 <div class="game__Play"><img src="images/castletrans.png" id="game__Playimg"></div>
                 
@@ -124,7 +124,7 @@
            </div> 
             <!--display results of game-->
             <div class="score_keep">        
-                <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score"></span></div>
+                <div class="user_Score"><span id="entered__usernameScore"></span><span id="user_score"></span> </div>
                 <div class="comp_score">Computer Score: <span id='comp__score'></span></div>
                 <div class="game_count">Game: <span id="game__count"></span></div>
             </div>
